# AI-Agentic-System

./: .cursorrules  .env.example  .gitignore  docker-compose.yml  research-request-002.json  research-request-005.json  research-request-006.json  research-request-007.json  research-request-008.json  research-request-009.json  research-request-010.json  research-request.json
.cursor/: hooks.json
business-trinity/: Dockerfile  pyproject.toml  requirements.txt
business-trinity/src/business_trinity/: __init__.py
business-trinity/src/business_trinity/api/: __init__.py  app.py  work_orders.py
business-trinity/src/business_trinity/orchestrator/: __init__.py  main_loop.py
business-trinity/src/business_trinity/storage/: __init__.py  log_writer.py
company-knowledge/: README.md
docs/: DECISION_DNA.md  DOC_STANDARD.md  FILE_MANIFEST.md  (+4 more)
rd-lab/: Dockerfile  pyproject.toml  requirements.txt
rd-lab/src/rd_lab/: __init__.py  autogen_research.py  autogen_runner.py
rd-lab/src/rd_lab.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
rd-lab/src/rd_lab/bridge/: __init__.py  debate_transcript.py  inbox.py  outbox.py
rd-lab/src/rd_lab/dinD_executor/: __init__.py  sandbox_runner.py
rd-lab/src/rd_lab/models/: __init__.py  research_request.py
rd-lab/src/rd_lab/storage/: __init__.py  log_writer.py
rd-lab/src/rd_lab/throttle/: __init__.py  openai_compat.py  routing_rules.py
shared-schemas/: pyproject.toml
shared-schemas/src/shared_schemas/: __init__.py  config.py  constitution.py  decision_record.py  research_discovery.py  rhythm_event.py  versioning.py  work_order.py
shared-schemas/src/shared_schemas.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
shared-schemas/tests/: test_rationale_required.py
(+41 files in other folders)
